Fix stream to list conversion