@@ -1,7 +1,6 @@
 package com.broit.utils;
 
 import java.util.Random;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 public class RandomUtils {
@@ -9,8 +8,7 @@ public class RandomUtils {
     private RandomUtils() {}
 
     public static <T> T fromIterable(Iterable<T> collection) {
-        var asList = StreamSupport.stream(collection.spliterator(), false)
-            .collect(Collectors.toList());
+        var asList = StreamSupport.stream(collection.spliterator(), false).toList();
         int max = asList.size();
         return asList.get(new Random().nextInt(max));
     }
